[package]
name = "luai"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
openai-api-rs = "6.0.3"
tokio = { version = "1", features = ["full"] }
mlua = { version = "0.10", features = ["luajit", "vendored"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"